[package]
name = "signal-cli-message-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = { version = "0.6.2", features = ["date"] }
colored = "2.0.4"
chrono = "0.4.31"
chrono-tz = "0.8.5"
